# AOC-2017

./: .gitignore  CMakeLists.txt  Makefile  README.md
03/: README.md  solution.cpp
04/: solution.cpp
05/: solution.cpp
06/: solution.cpp
07/: solution2.cpp
08/: solution.cpp
09/: garbage.txt  solution.cpp
1/: a.out  solution.cpp
10/: solution.cpp  solution2.cpp  test.txt
11/: puzzle.txt
12/: solution.cpp  solution2.cpp  test.txt
13/: solution.cpp  solution2.cpp
16/: puzzle.txt  solution.cpp  solution2.cpp  test.txt
17/: solution.cpp
2/: solution.cpp
3/: solution.cpp
4/: solution.cpp
5/: solution.cpp
6/: solution2.cpp
7/: solution.cpp
8/: solution.cpp
9/: groups.txt  solution2.cpp
