cmake_minimum_required(VERSION 3.9.6)
project(aoc)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED on)
add_compile_options(-Wall -Wextra -Wpedantic)
add_executable(day1 1/solution.cpp)
add_executable(day2 2/solution.cpp)
add_executable(day3 3/solution.cpp)
add_executable(day4 4/solution.cpp)
add_executable(day5 5/solution.cpp)
add_executable(day6 6/solution.cpp)
add_executable(day7 7/solution.cpp)
add_executable(day8 8/solution.cpp)
add_executable(day9 9/solution.cpp)
add_executable(day10 10/solution.cpp)
